cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug222886.cpp
class bug222886_A {
public:
    int a {(int)123};
};